# assistente-maia

./: .env.prod.example  .gitattributes  .gitignore  CLAUDE_CODE_LOCAL_DEV.md  README.md  docker-compose.prod.yml
docs/: deploy-aws-pinecone.md  dev-local-quickstart.md  guia-criacao-essays-nova-faixa-etaria.md  (+8 more)
maia-backend/: .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  eval_chunk_params.py  eval_retrieval.py  pyproject.toml
maia-backend/app/: main.py
maia-backend/app/api/: deps.py
maia-backend/app/api/v1/: chat.py  conversations.py  profile.py  stories.py
maia-backend/app/api/v1/webhooks/: hubla.py  whatsapp.py
maia-backend/app/core/: config.py  logging.py  security.py
maia-backend/app/db/: models.py  supabase.py
maia-backend/app/llm/: anthropic_client.py  llm_client.py  openai_client.py  qwen_client.py  story_client.py
maia-backend/app/llm/prompts/: __init__.py  system_anthropic.py  system_openai.py  system_stories.py
maia-backend/app/llm/tools/: base.py
maia-backend/app/middleware/: rate_limit.py  request_id.py
maia-backend/app/rag/: README.md  chunking.py  embeddings.py  ingest.py  loaders.py  manifest.py  vector_store.py
maia-backend/app/services/: audio_service.py  chat_service.py  conversation_service.py  email_service.py  profile_service.py  story_service.py
maia-backend/docs/: progress-report-2026-06-11.md  rag-inventory.md
maia-backend/migrations/: 001_initial_schema.sql  002_sprint11.sql
maia-backend/tests/: conftest.py  test_auth.py  test_chat.py
maia-backend/tests/rag/: queries.jsonl
(+46 files in other folders)
