[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maia-backend"
version = "0.1.0"
description = "MaIA — Backend FastAPI (local dev)"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Config
    "pydantic-settings>=2.3.0",
    # LLM providers
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    # Vector DB
    "chromadb>=0.5.0",
    "pinecone>=5.0.0",
    # Embeddings / retry
    "tenacity>=8.3.0",
    # Document loaders
    "pypdf>=4.3.0",
    "python-docx>=1.1.0",
    # Auth / security
    "python-jose[cryptography]>=3.3.0",
    "supabase>=2.5.0",
    # Logging
    "structlog>=24.2.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Email (stub em dev)
    "resend>=2.0.0",
    # HTTP client
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
